--- a/img_conversion/copy_as_png.yaml
+++ b/img_conversion/copy_as_png.yaml
@@ -26,4 +26,4 @@ action:
   register:
     file: 
       enable: true 
-      filter: "*.psd;*.exr;*.tga;*.obj;*.fbx;*.glb;*.gltf;*.hdr;*.psb" 
+      filter: "*.psd;*.exr;*.tga;*.obj;*.fbx;*.glb;*.gltf;*.hdr;*.psb;*.usd;" 
